After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770821 - test-suite failure in test_spawn_async_with_pipes: TypeError: Must be string, not NoneType
test-suite failure in test_spawn_async_with_pipes: TypeError: Must be string,...
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
Git master
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-03 16:38 UTC by Michael Biebl
Modified: 2016-09-03 21:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Handle nullable filename parameters (3.04 KB, patch)
2016-09-03 18:11 UTC, Christoph Reiter (lazka)
committed Details | Review

Description Michael Biebl 2016-09-03 16:38:52 UTC
I'm getting a failure when trying to run the test suite
Comment 1 Michael Biebl 2016-09-03 16:40:18 UTC
Version: 3.2.91
gobect-introspection: 1.49.1
glib: 2.49.6


ERROR: test_spawn_async_with_pipes (test_subprocess.TestProcess)
----------------------------------------------------------------------
Traceback (most recent call last):
  • File "/home/michael/debian/build-area/pygobject-3.21.91/tests/test_subprocess.py", line 128 in test_spawn_async_with_pipes
    flags=GLib.SpawnFlags.SEARCH_PATH)
TypeError: Must be string, not NoneType

----------------------------------------------------------------------
Comment 2 Michael Biebl 2016-09-03 16:41:16 UTC
This failure doesn't happen with glib 2.48 and g-i 1.48
Comment 3 Christoph Reiter (lazka) 2016-09-03 16:42:33 UTC
Yeah, just noticed myself, thanks.
Comment 4 Christoph Reiter (lazka) 2016-09-03 17:17:11 UTC
This is due to the glib annotation being switched to filename in bug 767245 and the current pygobject code not handling nullable for filenames.

This would be fixed by the patch in bug 746564 which implements proper filename handling.

Two options:

* Add a nullable check in  _pygi_marshal_from_py_filename
* Push the patch in bug 746564, which is currently missing a review
Comment 5 Christoph Reiter (lazka) 2016-09-03 18:11:57 UTC
Created attachment 334730 [details] [review]
Handle nullable filename parameters

Make _pygi_marshal_from_py_filename handle None input
values. This allows one to pass None to parameters
annotated as nullable filenames.

This fixes a test suite error in test_spawn_async_with_pipes
triggered by an annotation change in glib.