Handle nullable filename parameters

Make _pygi_marshal_from_py_filename handle None input
values. This allows one to pass None to parameters
annotated as nullable filenames.

This fixes a test suite error in test_spawn_async_with_pipes
triggered by an annotation change in glib.

https://bugzilla.gnome.org/show_bug.cgi?id=770821